tests/NormalTests/paczka1/small_fuzzy/12590205.err
Error in line 4: pSsOHWCO S355 32,4
Error in line 9: pSsOHWCO A717 78,7
